<resources>
    <string name="app_name">redmining</string>
    <string name="url_hint">https://service.redmine.com</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="app_title1">it\'s Redmine client</string>
    <string name="app_title2">for you</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>